--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-plugin-webfonts": "^2.2.2",
     "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-source-strapi": "^2.0.0",
+    "gatsby-transformer-remark": "^5.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
