--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "gatsby-source-strapi": "^2.0.0",
     "gatsby-transformer-remark": "^5.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
+    "parse-numeric-range": "^1.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.5"
   },
@@ -39,6 +43,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-syntax-highlighter": "^15.5.2",
     "@types/styled-components": "^5.1.25",
     "typescript": "^4.7.4"
   }
