--- a/package.json
+++ b/package.json
@@ -1,50 +1,66 @@
 {
-  "name": "kozlicki-blog",
-  "version": "1.0.0",
-  "private": true,
-  "description": "kozlicki-blog",
-  "author": "fkozlicki",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "babel-plugin-styled-components": "^2.0.7",
-    "gatsby": "^4.17.2",
-    "gatsby-plugin-image": "^2.17.0",
-    "gatsby-plugin-react-helmet": "^5.17.0",
-    "gatsby-plugin-sharp": "^4.17.0",
-    "gatsby-plugin-styled-components": "^5.17.0",
-    "gatsby-plugin-webfonts": "^2.2.2",
-    "gatsby-source-filesystem": "^4.17.0",
-    "gatsby-source-strapi": "^2.0.0",
-    "gatsby-transformer-remark": "^5.17.0",
-    "gatsby-transformer-sharp": "^4.17.0",
-    "moment": "^2.29.4",
-    "normalize.css": "^8.0.1",
-    "parse-numeric-range": "^1.3.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
-    "react-markdown": "^8.0.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "slugify": "^1.6.5",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-syntax-highlighter": "^15.5.2",
-    "@types/styled-components": "^5.1.25",
-    "typescript": "^4.7.4"
-  }
+	"name": "kozlicki-blog",
+	"version": "1.0.0",
+	"private": true,
+	"description": "Filip Koźlicki Blog",
+	"author": "fkozlicki",
+	"keywords": [
+		"gatsby"
+	],
+	"scripts": {
+		"develop": "gatsby develop",
+		"start": "gatsby develop",
+		"build": "gatsby build",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"typecheck": "tsc --noEmit",
+		"cms:build": "yarn --cwd ./cms/ build",
+		"cms:develop": "yarn --cwd ./cms/ develop",
+		"server:build": "yarn --cwd ./server/ build",
+		"server:develop": "yarn --cwd ./server/ develop"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^2.9.7",
+		"@reduxjs/toolkit": "^1.8.3",
+		"axios": "^0.27.2",
+		"babel-plugin-styled-components": "^2.0.7",
+		"dotenv": "^16.0.1",
+		"gatsby": "^4.17.2",
+		"gatsby-plugin-image": "^2.17.0",
+		"gatsby-plugin-react-helmet": "^5.17.0",
+		"gatsby-plugin-sharp": "^4.17.0",
+		"gatsby-plugin-styled-components": "^5.17.0",
+		"gatsby-plugin-webfonts": "^2.2.2",
+		"gatsby-remark-autolink-headers": "^5.21.0",
+		"gatsby-remark-prismjs": "^6.21.0",
+		"gatsby-source-filesystem": "^4.17.0",
+		"gatsby-source-strapi": "^2.0.0",
+		"gatsby-transformer-remark": "^5.21.0",
+		"gatsby-transformer-sharp": "^4.17.0",
+		"moment": "^2.29.4",
+		"normalize.css": "^8.0.1",
+		"parse-numeric-range": "^1.3.0",
+		"prism-themes": "^1.9.0",
+		"prismjs": "^1.28.0",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-helmet": "^6.1.0",
+		"react-hook-form": "^7.34.2",
+		"react-hot-toast": "^2.3.0",
+		"react-icons": "^4.4.0",
+		"react-markdown": "^8.0.3",
+		"react-syntax-highlighter": "^15.5.0",
+		"slugify": "^1.6.5",
+		"styled-components": "^5.3.5",
+		"yup": "^0.32.11"
+	},
+	"devDependencies": {
+		"@types/node": "^17.0.45",
+		"@types/react": "^18.0.14",
+		"@types/react-dom": "^18.0.5",
+		"@types/react-syntax-highlighter": "^15.5.2",
+		"@types/styled-components": "^5.1.25",
+		"gatsby-plugin-root-import": "^2.0.8",
+		"typescript": "^4.7.4"
+	}
 }
