--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
 		"nodemailer-smtp-transport": "^2.7.4"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/node": "^18.7.11",
 		"@types/nodemailer": "^6.4.5",
