--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,8 @@ jobs:
         name: Build & push Docker image
         with:
           image: fkozlicki/gatsby-blog
-          directory: ./server
           tags: v1, latest
           registry: registry.hub.docker.com
-          dockerfile: Dockerfile
+          dockerfile: ./server/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
