--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
           image: fkozlicki/gatsby-blog
           tags: v1, latest
           registry: registry.hub.docker.com
-          dockerfile: /server/Dockerfile
+          context: ./server
+          file: ./server/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
