--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main]
 
+defaults:
+  run:
+    working-directory: ./server
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,10 +21,8 @@ jobs:
           node-version: 16
       - name: Run ci
         run: yarn install --frozen-lockfile
-        working-directory: ./server
       - name: Build
         run: yarn build
-        working-directory: ./server
   docker-build-and-deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -31,6 +33,6 @@ jobs:
           image: fkozlicki/gatsby-blog
           tags: v1, latest
           registry: registry.hub.docker.com
-          dockerfile: /server/Dockerfile
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
