--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - run: ls
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Build & push Docker image
         with:
