--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,16 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
+  docker:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Build & push Docker image
         with:
           image: fkozlicki/gatsby-blog
           tags: v1, latest
           registry: registry.hub.docker.com
-          dockerfile: Dockerfile
+          dockerfile: ./server/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
