--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,5 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: mr-smithers-excellent/docker-build-push@v5
-        name: Build & push Docker image
-        with:
-          image: fkozlicki/gatsby-blog
-          tags: v1, latest
-          registry: registry.hub.docker.com
-          dockerfile: ../server/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build docker image
+        run: docker build . --file Dockerfile --tag gatsby-server:latest
