--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,11 @@ defaults:
     working-directory: ./server
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./server
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -23,16 +26,15 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
-  docker:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: mr-smithers-excellent/docker-build-push@v5
-        name: Build & push Docker image
-        with:
-          image: fkozlicki/gatsby-blog
-          tags: v1, latest
-          registry: registry.hub.docker.com
-          dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Docker Login
+        env: 
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        run: 
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        env: 
+          REPO: gatsby-blog
+        run: |
+          docker build -t $REPO .
+          docker tag $REPO:latest ${{secrets.DOCKER_USER}}/$REPO:latest
+          docker push ${{secrets.DOCKER_USER}}/$REPO
