--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn build
       - name: Docker Login
         env:
-          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - name: Docker Push
@@ -36,5 +36,5 @@ jobs:
           REPO: gatsby-blog
         run: |
           docker build -t $REPO .
-          docker tag $REPO:latest ${{secrets.DOCKER_USER}}/$REPO:latest
-          docker push ${{secrets.DOCKER_USER}}/$REPO
+          docker tag $REPO:latest ${{secrets.DOCKER_USERNAME}}/$REPO:latest
+          docker push ${{secrets.DOCKER_USERNAME}}/$REPO
