--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,5 @@ jobs:
           REPO: gatsby-blog
         run: |
           docker build -t $REPO .
+          docker tag $REPO:latest ${{secrets.DOCKER_USERNAME}}/$REPO:latest
           docker push ${{secrets.DOCKER_USERNAME}}/$REPO
