--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
         env:
           REPO: gatsby-blog
         run: |
-          docker build -t $REPO:latest .
-          docker tag $REPO:latest ${{secrets.DOCKER_USERNAME}}/$REPO:latest
+          docker build -t $REPO .
+          docker tag $REPO ${{secrets.DOCKER_USERNAME}}/$REPO:latest
           docker push ${{secrets.DOCKER_USERNAME}}/$REPO:latest
