--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ defaults:
     working-directory: ./server
 
 jobs:
-  build-and-deploy:
+  build-and-deploy-server:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -38,3 +38,16 @@ jobs:
           docker build -t $REPO .
           docker tag $REPO ${{secrets.DOCKER_USERNAME}}/$REPO:server
           docker push ${{secrets.DOCKER_USERNAME}}/$REPO:server
+      - name: Docker Pull & Run From Hub
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.SERVER_HOST}}
+          username: ubuntu
+          key: ${{secrets.SERVER_SSH_KEY}}
+          envs: GITHUB_SHA
+          script: |
+            docker login
+            docker pull ${{secrets.DOCKER_USERNAME}}/$REPO
+            docker stop gatsby-server
+            docker rm gatsby-server
+            docker run -d --name gatsby-server -p 3000:3000 -e GMAIL_USER=${{secrets.GMAIL_USER}} -e GMAIL_PASSWORD=${{secrets.GMAIL_PASSWORD}} ${{secrets.DOCKER_USERNAME}}/$REPO:server
