--- a/cms/package.json
+++ b/cms/package.json
@@ -7,14 +7,17 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "build:win": "cross-env NODE_ENV=production yarn build",
+    "start:win": "cross-env NODE_ENV=production yarn start"
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.2.2",
-    "@strapi/plugin-users-permissions": "4.2.2",
     "@strapi/plugin-i18n": "4.2.2",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.2.2",
+    "@strapi/strapi": "4.2.2",
+    "better-sqlite3": "^7.6.2",
+    "cross-env": "^7.0.3"
   },
   "author": {
     "name": "A Strapi developer"
