--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{secrets.SERVER_HOST}}
+          port: 22
           username: ubuntu
           key: ${{secrets.SERVER_SSH_KEY}}
           envs: GITHUB_SHA
