--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,12 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{secrets.SERVER_HOST}}
-          port: 22
           username: ubuntu
           key: ${{secrets.SERVER_SSH_KEY}}
           envs: GITHUB_SHA
           script: |
             docker login
-            docker pull ${{secrets.DOCKER_USERNAME}}/$REPO
+            docker pull ${{secrets.DOCKER_USERNAME}}/gatsby-blog
             docker stop gatsby-server
             docker rm gatsby-server
-            docker run -d --name gatsby-server -p 3000:3000 -e GMAIL_USER=${{secrets.GMAIL_USER}} -e GMAIL_PASSWORD=${{secrets.GMAIL_PASSWORD}} ${{secrets.DOCKER_USERNAME}}/$REPO:server
+            docker run -d --name gatsby-server -p 3000:3000 -e GMAIL_USER=${{secrets.GMAIL_USER}} -e GMAIL_PASSWORD=${{secrets.GMAIL_PASSWORD}} ${{secrets.DOCKER_USERNAME}}/gatsby-blog:server
