--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           key: ${{secrets.SERVER_SSH_KEY}}
           envs: GITHUB_SHA
           script: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+            docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
             docker pull ${{secrets.DOCKER_USERNAME}}/gatsby-blog:server
             docker stop gatsby-server
             docker rm gatsby-server
