--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
     defaults:
       run:
         working-directory: ./server
-
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -41,7 +40,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: gatsby-blog
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: server
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
