--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
               id: task-def
               uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
               with:
-                task-definition: 'ServerTas'
+                task-definition: 'ServerTas:2'
                 container-name: 'ServerContainer'
                 image: ${{ steps.build-image.outputs.image }}
 
