--- a/cms/package.json
+++ b/cms/package.json
@@ -17,7 +17,8 @@
     "@strapi/plugin-users-permissions": "4.2.2",
     "@strapi/strapi": "4.2.2",
     "better-sqlite3": "^7.6.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "strapi-plugin-vercel-deploy": "^1.3.1"
   },
   "author": {
     "name": "A Strapi developer"
